PMA-46: fix word wrap

--- a/src/components/board/components/column/styles.module.scss
+++ b/src/components/board/components/column/styles.module.scss
@@ -5,6 +5,7 @@
   padding: 20px;
   border-radius: 3px;
   opacity: 0.8;
+  overflow-wrap: break-word;
   transition: opacity 0.2s, box-shadow 0.2s;
 }
 
